# example-rhesus-monkeys

./: .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE-MIT.md  README.md  datapackage.json  main.py  pyproject.toml
.github/workflows/: update-from-template.yml
scripts/: convert-meta.py  convert-samples.py  create-datapackage-json.py  download-data.py  edit-datapackage-json.py  package_properties.py
