[tool.poetry]
name = "example-rhesus-monkeys"
version = "0.0.1"
description = ""
authors = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
]
maintainers = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
]
readme = "README.md"
repository = "https://github.com/seedcase-project/example-rhesus-monkeys"  
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seedcase-project/example-rhesus-monkeys/issues"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.24.0"
pyjanitor = "^0.30.0"
seedcase-sprout = {git = "https://github.com/seedcase-project/seedcase-sprout.git"}
requests = "^2.32.3"
fastexcel = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
