[project]
name = "example-rhesus-monkeys"
version = "0.1.0"
# TODO: Add a description of the package.
description = ""
authors = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  # TODO: Add more authors as needed.
]
maintainers = [
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  # TODO: Add more maintainers as needed.
]
readme = "README.md"

license = "MIT AND CC0-1.0"
license-files = ["LICENSE-MIT.md", "LICENSE.md"]

requires-python = ">=3.12"
dependencies = [
    "polars>=1.32.3",
    "seedcase-sprout>=0.48.0",
]

[project.urls]
issues = "https://github.com/seedcase-project/example-rhesus-monkeys/issues"
repository = "https://github.com/seedcase-project/example-rhesus-monkeys"

[dependency-groups]
dev = [
    "commitizen>=4.5.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "typos>=1.35.5",
]
